--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hhoangphuoc.diarybuddy">
 
-<!--    <uses-feature android:name="android.hardware.type.watch" />-->
 
-<!--    <uses-permission android:name="android.permission.WAKE_LOCK" />-->
+    <!--    <uses-feature android:name="android.hardware.type.watch" />-->
+
+    <!--    <uses-permission android:name="android.permission.WAKE_LOCK" />-->
 
     <!--
         [Speech] - Adding permission for speech recognition
@@ -37,19 +38,19 @@
         <!--
             [Widget] - Register Widget for the app
         -->
-        <receiver
-            android:name=".widget.DiaryBuddyWidgetReceiver"
-            android:enabled="@bool/diary_buddy_appwidget_available"
-            android:exported="true"
-            android:label="LocketAndroidWidgetReceiver">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-            </intent-filter>
+<!--        <receiver-->
+<!--            android:name=".widget.DiaryBuddyWidgetReceiver"-->
+<!--            android:enabled="@bool/diary_buddy_appwidget_available"-->
+<!--            android:exported="true"-->
+<!--            android:label="LocketAndroidWidgetReceiver">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />-->
+<!--            </intent-filter>-->
 
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/app_widget_diary_buddy_info" />
-        </receiver>
+<!--            <meta-data-->
+<!--                android:name="android.appwidget.provider"-->
+<!--                android:resource="@xml/app_widget_diary_buddy_info" />-->
+<!--        </receiver>-->
     </application>
 
 </manifest>
