--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hhoangphuoc.diarybuddy">
 
-
-    <!--    <uses-feature android:name="android.hardware.type.watch" />-->
-
-    <!--    <uses-permission android:name="android.permission.WAKE_LOCK" />-->
-
     <!--
         [Speech] - Adding permission for speech recognition
     -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+<!--    <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE"/>-->
 
     <application
+        android:name=".DiaryBuddy"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -51,6 +50,42 @@
 <!--                android:name="android.appwidget.provider"-->
 <!--                android:resource="@xml/app_widget_diary_buddy_info" />-->
 <!--        </receiver>-->
+
+        <!-- Main Activity -->
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.DiaryBuddy">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <!-- Gemini Test Activity -->
+        <activity
+            android:name=".ui.GeminiTestActivity"
+            android:exported="true"
+            android:label="Gemini API Test"
+            android:theme="@style/Theme.DiaryBuddy">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+        <!-- Settings Activity -->
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:exported="true"
+            android:label="Settings"
+            android:theme="@style/Theme.DiaryBuddy">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
